* current release:
    - added an EOT& parameter to the moCoolingSchedule::update interface because some cooling schedules need it

* release 1.3.1 (2012-07-27)
    - the eo::mpi modules is no longer dependent from boost::mpi
    - parallel multi-start example
    - bugfix: an error is now thrown when accessing best_element of an empty population

* release 1.3.0 (2012-07-24)
    - features:
        - delete the deprecated code parts (was marked as deprecated in the release 1.1)
        - eoSignal: a class to handle signal with eoCheckpoint instances
        - eoDetSingleBitFlip: bit flip mutation that changes exactly k bits while checking for duplicate
        - eoFunctorStat: a wrapper to turn any stand-alone function and into an eoStat
        - generilazed the output of an eoState: now you can change the format, comes with defaults formatting (latex and json)
        - eoWrongParamTypeException: a new exception to handle cases where a wrong template is given to eoParser::valueOf
        - added a getParam method to the eoParser, that raise an exception if the parameter has not been declared
        - eoParserLogger features are now included in the default eoParser
    - build system:
        - improvements of the build architecture
        - create PKGBUILD file for archlinux package manager
        - a FindEO module for CMake
    - bugfixes:
        - fixed regression with gcc 4.7
        - fixed compilation issues in Microsoft Visual C++, related to time measurement
        - added several asserts accross the framework (note: asserts are included only in debug mode)
        - lot of small bugfixes :-)

* release 1.2  (16. May. 2011)
  - fixed the incremental allocation issue in variation operators which were
    taking too much time for big population sizes
  - new class eoParallel enabling parallelization in EO using OpenMP. At this
    time, it only concerns the evaluation operator, for advanced details go to